--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -23,7 +23,7 @@
             a {
                 color: #fff;
                 font-size: 1.4rem;
-                font-weight: 500;
+                font-weight: 600;
                 letter-spacing: 1px;
                 margin: 0.5rem 0;
                 max-width: 400px;
@@ -33,23 +33,39 @@
                 width: 100%;           
 
                 &.linkedin {
-                    background-color: #0077b5;
-                    &:hover { background-color: #005786; }
+                    color: #0077b5;
+                    border: 4px solid #0077b5;
+                    &:hover {
+                        color: #fff;
+                        background-color: #0077b5;
+                    }
                 }
 
                 &.github {
-                    background-color: #000;
-                    &:hover { background-color: #1d1d1d; }
+                    color: #000;
+                    border: 4px solid #000;
+                    &:hover {
+                        color: #fff;
+                        background-color: #000;
+                    }
                 }
 
                 &.instagram {
-                    background-color: #c13584;
-                    &:hover { background-color: #8b2861; }
+                    color: #ed4b8a;
+                    border: 4px solid #ed4b8a;
+                    &:hover {
+                        color: #fff;
+                        background-color: #ed4b8a;
+                    }
                 }
 
                 &.tiktok {
-                    background-color: #ff0050;
-                    &:hover { background-color: #c0023e; }
+                    color: #ff0050;
+                    border: 4px solid #ff0050;
+                    &:hover {
+                        color: #fff;
+                        background-color: #ff0050;
+                    }
                 }
             }
         }
