--- a/src/pages/PersonalWebsite/PersonalWebsite.css
+++ b/src/pages/PersonalWebsite/PersonalWebsite.css
@@ -1,7 +1,5 @@
 #personal-website {
     padding: 1rem 0;
-    @media ( max-width: 768px ) { max-width: 550px; }
-    @media ( min-width: 769px ) { max-width: 1200px; }
 
     .introduction-outer-container {
         margin: 0 auto;
@@ -12,24 +10,22 @@
     }
 
     .personal-website-container {
-        padding: 0 1rem;
-
-        @media ( max-width: 768px ) {
-            margin: 4rem auto 0 auto;
-            max-width: 550px;
-        }
-
-        @media ( min-width: 769px ) {
-            margin: 6rem auto 0 auto;
-            max-width: 1200px;
-        }
 
         .personal-website__block {
+            padding: 0 1rem;
             &:not(:first-child) { margin-block-start: 5rem; }
 
-            h2, h4 { letter-spacing: 2px; }
+            @media ( max-width: 768px ) {
+                margin: 4rem auto 0 auto;
+                max-width: 550px;
+            }
+    
+            @media ( min-width: 769px ) {
+                margin: 6rem auto 0 auto;
+                max-width: 1200px;
+            }
 
-            p {}
+            h2, h4 { letter-spacing: 2px; }
 
             figure {
                 display: flex;
@@ -56,7 +52,14 @@
                 }
 
                 &.moodboard, &.sitemap { max-width: 700px; }
+                &.lighthouse { max-width: 460px; }
                 &.cssart { max-width: 300px; }
+            }
+
+            &.intro {
+                h4, p { text-align: center; }
+                
+                @media ( min-width: 769px ) { margin: 8rem auto 0 auto; }
             }
 
             &.conclusions {
@@ -79,6 +82,20 @@
 
                 p { text-align: center; }
             }
-        }        
+        }
+
+        .personal-website__image {
+            margin: 5rem auto 0 auto;
+            max-width: 2000px;
+
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            height: 300px;
+            overflow: hidden;
+            width: 100%;            
+
+            @media ( min-width: 769px ) { height: 400px; }
+        }
     }
 }
