--- a/src/pages/ComponentSystem/ComponentSystem.css
+++ b/src/pages/ComponentSystem/ComponentSystem.css
@@ -69,6 +69,20 @@
                     }
                 }
             } 
+
+            figure {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                text-align: center;
+
+                margin: 4rem auto 0 auto;
+
+                img {
+                    @media ( max-width: 768px ) { width: 100%; }
+                    @media ( min-width: 769px ) { width: 70%; }
+                }
+            }
         }
 
         .component-system__info {
@@ -84,7 +98,7 @@
                 max-width: 1200px;
             }
 
-            &.columns, &.skins {
+            &.columns, &.skins, &.variants {
                 display: flex;
                 flex-direction: column;
                 gap: 1rem;
@@ -100,7 +114,7 @@
                 }
             }
 
-            &.columns {
+            &.columns, &.skins {
                 @media ( min-width: 769px ) {
                     & > div { width: calc(55% - 0.5rem); }
                     & > figure { width: calc(45% - 0.5rem); }
@@ -111,9 +125,14 @@
                 }
             }
 
-            &.skins {
+            &.variants {
                 & > div, & > figure {
                     @media ( min-width: 769px ) { width: calc(50% - 0.5rem); }
+                }
+
+                @media ( max-width: 768px ) {
+                    & > div { order: 1; }
+                    & > figure { order: 2; }
                 }
 
                 @media ( min-width: 769px ) {
